--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -2,7 +2,7 @@
   margin-bottom: 35px;
 
   outline: 1px solid orange;
-  background: @color-light-grey url("../../../img/hero-mobile@1x.jpg") no-repeat center -20px;
+  background: @color-light-grey url("../img/hero-mobile@1x.jpg") no-repeat center -20px;
 
   @media (min-width: @tablet-width) {
     display: flex;
@@ -11,7 +11,7 @@
     height: 740px;
     margin-top: -90px;
 
-    background: url("../../../img/hero-mobile@1x.jpg") 50% 0 no-repeat @color-light-grey;
+    background: url("../img/hero-mobile@1x.jpg") 50% 0 no-repeat @color-light-grey;
     background-size: cover;
 
     flex-wrap: wrap;
