--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -57,7 +57,7 @@
 
   .reset-list();
 
-  &--desktop-only {
+  &--news {
     display: none;
   }
 
@@ -82,7 +82,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    &--desktop-only {
+    &--news {
       display: flex;
     }
 
