--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -11,7 +11,7 @@
 
     padding: 70px 50px 53px 50px;
 
-    background: @color-light-grey url("../../../img/review@1x.jpg") no-repeat 0;
+    background: @color-light-grey url("../img/review@1x.jpg") no-repeat 0;
 
     flex-wrap: wrap;
     justify-content: space-between;
