Подогнал все блоки главной страницы под макет(мобильник)

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,5 @@
 .contacts {
-  padding: 43px 0 39px 0;
+  padding: 40px 0 39px 0;
 
   outline: 1px solid blue;
 
@@ -17,6 +17,8 @@
 }
 
 .contacts_wrapper {
+  margin-bottom: 37px;
+  padding: 0 30px;
   @media (min-width: @desktop-width) {
     width: 302px;
     margin-top: 80px;
@@ -30,6 +32,8 @@
   line-height: 30px;
 
   margin: 0;
+  margin-bottom: 27px;
+  padding: 0;
 
   outline: 1px solid blue;
 
@@ -47,8 +51,6 @@
 .contacts__info {
   font-size: 15px;
   line-height: 30px;
-
-  padding: 20px 0;
 
   outline: 1px solid blue;
 
@@ -72,8 +74,8 @@
 .contacts__item {
   display: flex;
 
-  min-height: 20px;
-  padding: 20px 0;
+  min-height: 30px;
+  margin-top: 28px;
 
   outline: 1px solid blue;
 
@@ -131,7 +133,7 @@ iframe.contacts__map-item {
 }
 
 .contacts__write-us {
-  margin: 39px auto 0;
+  margin: 36px auto 0;
 
   @media (min-width: @tablet-width) {
     margin-top: 55px;
