--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -58,9 +58,9 @@
   height: 80px;
 
   cursor: pointer;
-  outline: none;
 
   border: none;
+  outline: none;
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -130,7 +130,9 @@
 }
 
 .main-nav__item {
-  padding: 35px 0;
+  height: 51px;
+  padding-top: 28px;
+  padding-left: 45px;
 
   outline: 1px solid green;
 
