--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -34,10 +34,11 @@
 .page-footer__social-list {
   display: flex;
 
-  padding: 26px 0;
+  height: 80px;
 
   outline: 1px solid red;
 
+  justify-content: center;
   .reset-list();
 
   @media (min-width: @tablet-width) {
@@ -48,8 +49,7 @@
 }
 
 .page-footer__social-item {
-  width: 24px;
-  height: 30px;
+  padding-right: 40px;
 
   outline: 1px solid green;
 }
@@ -59,7 +59,9 @@
   font-weight: bold;
   line-height: 18px;
 
-  padding: 26px 0;
+  height: 52px;
+  padding-top: 28px;
+  padding-left: 69px;
 
   text-decoration: none;
 
