--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -1,5 +1,5 @@
 .about-us {
-  padding: 30px 0 53px 0;
+  padding: 33px 30px 27px 30px;
 
   outline: 1px solid blue;
 
@@ -20,7 +20,8 @@
   line-height: 30px;
 
   margin: 0;
-  padding-bottom: 28px;
+  margin-bottom: 31px;
+  padding: 0;
 
   outline: 1px solid blue;
 
@@ -70,8 +71,10 @@
 }
 
 .about-us__item {
-  height: 61px;
-  padding: 85px 0 27px 0;
+  height: 67px;
+  margin: 0;
+  padding-top: 56px;
+  padding-bottom: 0;
 
   outline: 1px solid blue;
 
