--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -1,6 +1,4 @@
 .good-sorts {
-  margin-bottom: 35px;
-
   outline: 1px solid orange;
   background: @color-light-grey url("../img/hero-mobile@1x.jpg") no-repeat center -20px;
 
@@ -24,8 +22,8 @@
   font-weight: bold;
   line-height: 30px;
 
-  margin: 0 0 120px 0;
-  padding: 72px 30px 0 30px;
+  margin: 0 0 123px 0;
+  padding: 70px 30px 0 30px;
 
   text-align: center;
 
@@ -61,8 +59,9 @@
 }
 
 .good-sorts__item {
-  min-height: 43px;
-  padding: 30px 30px;
+  height: 78px;
+  padding-top: 24px;
+  padding-left: 30px;
 
   outline: 1px solid blue;
 
