--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -27,7 +27,7 @@
   font-weight: bold;
   line-height: 30px;
 
-  margin: 0 0 29px 0;
+  margin: 0 0 24px 0;
 
   outline: 1px solid orange;
 
@@ -67,7 +67,7 @@
   font-size: 15px;
   line-height: 30px;
 
-  margin: 0 0 32px 0;
+  margin: 0 0 30px 0;
 
   @media (min-width: @tablet-width) {
     font-size: 17px;
@@ -85,7 +85,7 @@
   font-size: 17px;
   font-weight: bold;
 
-  margin: 0 0 7px 0;
+  margin: 0 0 10px 0;
 
   outline: 1px solid orange;
 }
@@ -93,7 +93,7 @@
 .opinions__email {
   font-size: 17px;
 
-  margin: 0 0 33px 0;
+  margin: 0 0 37px 0;
 
   outline: 1px solid orange;
 }
@@ -102,7 +102,8 @@
   display: flex;
 
   width: 260px;
-  margin-bottom: 38px;
+  height: 52px;
+  margin-bottom: 37px;
 
   outline: 1px solid orange;
 
