Подогнал страницу Каталог для мобильной версии

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -8,7 +8,7 @@
 }
 
 .catalog__item {
-  margin-top: 30px;
+  margin-bottom: 30px;
 
   outline: 1px solid red;
 
@@ -46,6 +46,7 @@
 .catalog__description {
   display: flex;
 
+  margin-top: 25px;
   padding: 0 30px;
 
   outline: 1px solid red;
@@ -80,6 +81,7 @@
   line-height: 24px;
 
   margin: 0;
+  padding-bottom: 4px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -94,7 +96,7 @@
 
   width: 100%;
   margin: 0;
-  padding-bottom: 25px;
+  padding-bottom: 19px;
 
   outline: 1px solid red;
 
@@ -107,6 +109,9 @@
 
 .catalog__order {
   display: flex;
+
+  margin: 0;
+  padding-top: 20px;
 }
 
 .catalog__price {
@@ -116,7 +121,6 @@
 
   width: 65%;
   margin: 0;
-  padding: 19px 0;
 
   outline: 1px solid red;
 
