--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -7,8 +7,9 @@
   font-weight: bold;
   line-height: 30px;
 
-  margin: 0 0 30px 0;
-  padding: 75px 0;
+  height: 105px;
+  margin: 0 0 31px 0;
+  padding-top: 71px;
 
   text-align: center;
 
