--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -1,6 +1,6 @@
 .work-process {
-  padding-top: 32px;
-  padding-bottom: 60px;
+  margin-bottom: 60px;
+  padding-bottom: 32px;
 
   outline: 2px solid blue;
 
@@ -23,7 +23,7 @@
   line-height: 24px;
 
   margin: 0;
-  padding: 30px 12px 30px 60px;
+  padding: 25px 0 25px 90px;
 
   outline: 1px solid blue;
 
@@ -40,6 +40,7 @@
   position: relative;
 
   width: 100%;
+  height: 150px;
 
   outline: 1px solid blue;
 
@@ -65,7 +66,8 @@
   font-size: 13px;
   line-height: 24px;
 
-  padding: 0 35px;
+  margin: 0;
+  padding: 26px 35px;
 
   outline: 1px solid blue;
 
