Подогнал главную страницу Планшет

--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -5,7 +5,8 @@
 
   @media (min-width: @tablet-width) {
     max-width: @tablet-width;
-    padding: 60px 50px 80px 50px;
+    padding: 60px 50px 0px 50px;
+    margin-bottom: 25px;
   }
 
   @media (min-width: @desktop-width) {
@@ -31,6 +32,9 @@
 
     display: flex;
 
+    margin-bottom: 50px;
+    padding-top: 7px;
+
     align-content: center;
     flex-wrap: wrap;
   }
@@ -38,8 +42,6 @@
   @media (min-width: @desktop-width) {
     font-size: 53px;
     line-height: 57px;
-
-    display: flex;
 
     width: 65%;
 
@@ -80,6 +82,8 @@
 
   @media (min-width: @tablet-width) {
     width: 50%;
+    height: 103px;
+    padding-top: 52px;
 
     &--eco {
       order: 0;
