--- a/source/less/blocks/hit-product.less
+++ b/source/less/blocks/hit-product.less
@@ -25,11 +25,11 @@
     display: flex;
 
     width: 100%;
-    margin-top: 34px;
-    margin-bottom: 50px;
+    margin-top: 47px;
+    margin-bottom: 49px;
 
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
   }
 
   @media (min-width: @desktop-width) {
@@ -83,8 +83,12 @@
   outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
-    width: 70px;
+    line-height: 17px;
+
+    width: 120px;
     margin: 0;
+    padding-top: 12px;
+    padding-bottom: 0;
 
     text-align: center;
   }
@@ -142,7 +146,7 @@
   .reset-list();
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 35px;
+    margin-bottom: 57px;
   }
 
   @media (min-width: @desktop-width) {
@@ -171,7 +175,7 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 110px;
+    top: 78px;
     right: 0;
   }
 
@@ -210,8 +214,8 @@
   outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
-    font-size: 17px;
-    line-height: 20px;
+    font-size: 20px;
+    line-height: 24px;
 
     margin: 0 0 35px 0;
   }
