--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -7,15 +7,13 @@
   outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
-    width: 318px;
+    width: 320px;
     height: 90px;
 
     order: -2;
   }
 
   @media (min-width: @desktop-width) {
-    height: 90px;
-
     text-align: center;
 
     order: -1;
@@ -27,6 +25,6 @@
   padding: 22px 0;
 
   @media (min-width: @tablet-width) {
-    padding: 22px 0;
+    padding: 0;
   }
 }
