--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -6,10 +6,12 @@
 
   @media (min-width: @tablet-width) {
     position: relative;
+    height: 458px;
 
     display: flex;
 
-    padding: 70px 50px 53px 50px;
+    padding: 0px 50px 0 50px;
+    margin-bottom: 69px;
 
     background: @color-light-grey url("../img/review@1x.jpg") no-repeat 0;
 
@@ -35,15 +37,16 @@
     font-size: 43px;
     font-weight: bold;
     line-height: 50px;
-
-    margin-bottom: 53px;
+    margin-top: 77px;
+    margin-bottom: 32px;
   }
 }
 
 .opinions__write {
   @media (min-width: @tablet-width) {
     max-height: 50px;
-    padding-top: 12px;
+    margin-top: 79px;
+    width: 175px;
 
     order: 1;
   }
