--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -9,6 +9,7 @@
     padding: 0 50px 0;
 
     justify-content: space-between;
+    align-items: baseline;
   }
 }
 
@@ -26,8 +27,8 @@
 
 .page-footer__social {
   @media (min-width: @tablet-width) {
-    width: 200px;
-    height: 100px;
+    width: 50%;
+    height: 80px;
   }
 }
 
@@ -42,7 +43,8 @@
   .reset-list();
 
   @media (min-width: @tablet-width) {
-    padding-top: 22%;
+    height: 70px;
+    padding-top: 20%;
 
     justify-content: space-between;
   }
@@ -69,5 +71,6 @@
 
   @media (min-width: @tablet-width) {
     width: 25%;
+    padding-left: 33px;
   }
 }
