--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -32,7 +32,7 @@
     line-height: 50px;
 
     width: 100%;
-    margin-bottom: 210px;
+    margin-bottom: 225px;
     padding-top: 0;
   }
 
@@ -54,6 +54,8 @@
   @media (min-width: @tablet-width) {
     display: flex;
 
+    margin: 0 50px;
+
     flex-grow: 1;
   }
 }
@@ -66,7 +68,7 @@
   outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
-    max-height: 60px;
+    height: 92px;
 
     flex-grow: 1;
   }
@@ -81,9 +83,14 @@
 }
 
 .good-sorts__name {
+  font-size: 20px;
+  line-height: 30px;
+
   display: block;
 
   width: 130px;
+  margin-top: 3px;
+  margin-left: 6px;
 
   text-decoration: none;
 
