Подогнал каталог Планшет

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -17,7 +17,12 @@
   background-color: rgb(241, 241, 241);
 
   @media (min-width: @tablet-width) {
-    margin-top: -90px;
-    padding: 91px 0;
+    font-size: 43px;
+    line-height: 50px;
+
+    margin-top: -92px;
+    margin-bottom: 81px;
+    padding-top: 94px;
+    padding-bottom: 23px;
   }
 }
