--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -1,6 +1,6 @@
 .work-process {
-  margin-bottom: 60px;
-  padding-bottom: 32px;
+  margin-bottom: 65px;
+  padding-bottom: 44px;
 
   outline: 2px solid blue;
 
@@ -27,9 +27,12 @@
 
   outline: 1px solid blue;
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     font-size: 20px;
+    padding: 38px 0 8px 106px;
+  }
 
+  @media (min-width: @desktop-width) {
     width: 230px;
     margin-top: 100px;
     padding-left: 30px;
@@ -71,10 +74,13 @@
 
   outline: 1px solid blue;
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     font-size: 15px;
     line-height: 30px;
+    padding: 23px 35px 36px 40px;
+  }
 
+  @media (min-width: @desktop-width) {
     width: 250px;
   }
 }
@@ -86,8 +92,10 @@
   @media (min-width: @tablet-width) {
     font-size: 17px;
     line-height: 16px;
+    margin: 0 42px;
+    padding-top: 17px;
 
-    width: 598px;
+    width: 584px;
   }
 
   @media (min-width: @desktop-width) {
