--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -16,6 +16,7 @@
     display: flex;
 
     height: 334px;
+    margin-bottom: 54px;
   }
 
   @media (min-width: @desktop-width) {
@@ -28,7 +29,7 @@
 
 .catalog__link-wrapper {
   @media (min-width: @tablet-width) {
-    width: 50%;
+    width: 61%;
   }
 
   @media (min-width: @desktop-width) {
@@ -58,6 +59,8 @@
     flex-direction: column;
 
     width: 50%;
+    margin-top: 0;
+    padding-left: 26px;
   }
 
   @media (min-width: @desktop-width) {
@@ -112,6 +115,11 @@
 
   margin: 0;
   padding-top: 20px;
+
+  @media (min-width: @tablet-width) {
+    height: 75px;
+    padding-top: 0;
+  }
 }
 
 .catalog__price {
@@ -125,7 +133,10 @@
   outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
-    font-size: spx;
+    font-size: 17px;
+
+    padding-top: 25px;
+    padding-left: 5px;
   }
 }
 
