--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -12,57 +12,99 @@
   font-size: 13px;
   line-height: 24px;
 
-  outline: 1px solid green;
   margin-top: -9px;
   margin-bottom: 26px;
+
+  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
     font-size: 17px;
     line-height: 30px;
 
+    margin-top: -7px;
+    margin-bottom: 23px;
     padding: 0 50px;
+  }
+}
+
+.filter__fieldset-wrapper {
+  @media (min-width: @tablet-width) {
+    height: 178px;
+    padding-top: 50px;
   }
 }
 
 .filter__fieldset {
   position: relative;
-  padding: 0;
+
   margin: 0;
   margin-top: 9px;
+  padding: 0;
 
 
   @media (min-width: @tablet-width) {
     position: relative;
 
     margin: 0;
-    padding: 50px 50px;
+    padding: 34px 50px 50px 50px;
 
     border: none;
 
-    &--hl {
-      background-color: @color-dark-grey;
+    &--checkbox {
+      padding-bottom: 26px;
+    }
+
+    &--textfield {
+      padding-top: 40px;
+      padding-bottom: 5px;
+    }
+
+    &--single {
+      padding-top: 0;
+      padding-bottom: 18px;
+    }
+
+    &--textarea {
+      padding-top: 50px;
+      padding-bottom: 43px;
     }
   }
 }
 
-.filter__legend {
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 16px;
-    text-transform: uppercase;
+.filter__fieldset-wrapper--hl,
+.filter__fieldset--hl {
   @media (min-width: @tablet-width) {
+    background-color: @color-dark-grey;
+  }
+}
 
+
+.filter__legend {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 16px;
+
+  text-transform: uppercase;
+  @media (min-width: @tablet-width) {
     position: absolute;
-    top: 80px;
+    top: 69px;
 
     color: @color-mint;
+
+    &--radio {
+      top: 52px;
+    }
+
+    &--single {
+      top: 18px;
+    }
   }
 }
 
 .filter__input-list {
-  padding: 0;
   margin: 0;
   margin-top: 23px;
+  padding: 0;
 
   &--textfield {
     margin-top: 30px;
@@ -84,6 +126,8 @@
     display: flex;
     flex-direction: column;
 
+    margin-top: 0;
+    margin-bottom: 0;
     margin-left: 167px;
     padding: 0;
 
@@ -92,7 +136,19 @@
     &--checkbox {
       flex-direction: row;
 
+      margin-top: 16px;
+
       justify-content: space-between;
+    }
+
+    &--textfield {
+      margin-top: 26px;
+      margin-bottom: 8px;
+    }
+
+    &--single {
+      margin-top: 0;
+      padding-top: 0;
     }
   }
 
@@ -102,11 +158,29 @@
   }
 }
 
-li.filter__input-item {
+.filter__input-item {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 18px;
+
   display: block;
+
   height: 69px;
   margin-bottom: 22px;
+
+  outline: 1px solid green;
+
+  @media (min-width: @tablet-width) {
+    font-size: 19px;
+
+    display: flex;
+
+    margin-bottom: 6px;
+
+    align-items: flex-start;
+  }
 }
+
 .filter__input-list--radio .filter__input-item,
 .filter__input-list--checkbox .filter__input-item {
   height: 30px;
@@ -115,67 +189,66 @@ li.filter__input-item {
   padding-left: 61px;
 }
 
-.filter__input-list--single .filter__input-item {
-  height: 35px;
-}
-
-.filter__input-list--textarea .filter__input-item {
-  height: 142px;
-  margin-bottom: 13px;
-}
-
-.filter__label {
-  display: block;
-  margin-bottom: 15px;
-}
-
-.filter__input-item {
-  display: block;
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 18px;
-  margin: 30px 0;
-
-  outline: 1px solid green;
-
-  .reset-list();
-
-  &--textarea {
-    width: 260px;
-    height: 142px;
-    padding: 0;
-  }
-
-  &--textarea textarea {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-  }
-
+.filter__input-list--radio .filter__input-item {
   @media (min-width: @tablet-width) {
-    height: 50px;
-
-    &--textarea {
-      width: 501px;
-      height: 142px;
-    }
+    height: 36px;
+    margin-bottom: 0;
+    padding-top: 16px;
+    padding-left: 82px;
   }
+}
 
-  @media (min-width: @desktop-width) {
-    &--textarea {
-      width: 700px;
-    }
+.filter__input-list--radio .filter__input-item:first-child {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 24px;
   }
 }
 
 .filter__input-list--checkbox .filter__input-item {
   @media (min-width: @tablet-width) {
-    width: 50%;
+    height: 36px;
+    margin-bottom: 24px;
+    padding-top: 16px;
+    padding-left: 82px;
+  }
+}
+
+.filter__input-list--checkbox .filter__input-item {
+  @media (min-width: @tablet-width) {
+    width: 30%;
+    margin-right: 6px;
   }
 
   @media (min-width: @desktop-width) {
     width: 30%;
   }
+}
+
+.filter__input-list--single .filter__input-item {
+  height: 52px;
+}
+
+.filter__input-list--textarea .filter__input-item {
+  height: 142px;
+  margin-bottom: 13px;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 10px;
+  }
+}
+
+.filter__textarea {
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+  }
+}
+
+.filter__label {
+  display: block;
+
+  margin-right: 42px;
+  margin-bottom: 15px;
 }
 
 .filter__btn-note {
@@ -202,12 +275,18 @@ li.filter__input-item {
   padding-bottom: 33px;
 
   @media (min-width: @tablet-width) {
+    font-size: 17px;
+    line-height: 30px;
+
+    margin-top: 10px;
+
     order: 1;
   }
 }
 
 .filter__sent-order {
-  margin-bottom: 55px;
+  width: 230px;
+  margin-bottom: 50px;
 
   background-color: rgb(255, 255, 255);
 }
