Подогнал главную страницу Комп

--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -5,13 +5,14 @@
 
   @media (min-width: @tablet-width) {
     max-width: @tablet-width;
-    padding: 60px 50px 0px 50px;
+    padding: 60px 50px 0 50px;
     margin-bottom: 25px;
   }
 
   @media (min-width: @desktop-width) {
     max-width: @desktop-width;
-    padding: 68px 50px 90px 175px;
+    padding: 72px 50px 0 222px;
+    margin-bottom: 30px;
   }
 }
 
@@ -68,7 +69,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 65%;
+    width: 80%;
   }
 }
 
