--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -114,10 +114,11 @@
   display: flex;
 
   margin: 0;
-  padding-top: 20px;
+  padding-top: 21px;
+  padding-bottom: 29px;
 
   @media (min-width: @tablet-width) {
-    height: 75px;
+    height: 45px;
     padding-top: 0;
   }
 }
@@ -127,7 +128,7 @@
   font-weight: bold;
   line-height: 24px;
 
-  width: 65%;
+  width: 100%;
   margin: 0;
 
   outline: 1px solid red;
