--- a/source/less/blocks/hit-product.less
+++ b/source/less/blocks/hit-product.less
@@ -10,7 +10,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 40px 50px 75px 50px;
+    padding: 81px 50px 75px 50px;
   }
 }
 
@@ -64,7 +64,6 @@
     z-index: 100;
 
     min-width: 650px;
-    margin: 0;
   }
 }
 
@@ -94,7 +93,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 53px;
+    margin-right: 31px;
+    margin-left: 22px;
+    padding-top: 14px;
   }
 }
 
@@ -105,7 +106,7 @@
 
   @media (min-width: @desktop-width) {
     width: 292px;
-    padding-left: 123px;
+    padding-left: 175px;
   }
 }
 
@@ -130,7 +131,7 @@
     font-size: 17px;
     line-height: 30px;
 
-    margin-bottom: 68px;
+    margin-bottom: 45px;
     padding: 0;
   }
 }
@@ -150,7 +151,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 68px;
+    margin-bottom: 112px;
   }
 }
 
@@ -182,7 +183,7 @@
   @media (min-width: @desktop-width) {
     position: absolute;
     z-index: 90;
-    top: -50px;
+    top: -83px;
     right: 0;
   }
 }
