--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -12,7 +12,7 @@
   @media (min-width: @desktop-width) {
     position: relative;
 
-    padding: 69px 50px 57px 175px;
+    padding: 69px 50px 57px 224px;
   }
 }
 
@@ -20,12 +20,13 @@
   margin-bottom: 37px;
   padding: 0 30px;
   @media (min-width: @tablet-width) {
-    padding: 0 50px;
     margin-bottom: 57px;
+    padding: 0 50px;
   }
   @media (min-width: @desktop-width) {
     width: 302px;
-    margin-top: 80px;
+    margin-top: 56px;
+    padding: 0;
   }
 }
 
@@ -42,12 +43,12 @@
   outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 28px;
     font-size: 43px;
     line-height: 50px;
-    height: 70px;
-    padding-top: 15px;
 
+    height: 70px;
+    margin-bottom: 28px;
+    padding-top: 15px;
   }
 
   @media (min-width: @desktop-width) {
@@ -88,14 +89,21 @@
   @media (min-width: @tablet-width) {
     font-size: 17px;
     line-height: 30px;
-    margin: 0;
 
     width: 50%;
+    margin: 0;
   }
 
   @media (min-width: @desktop-width) {
     width: 100%;
     margin: 0;
+  }
+}
+
+.contacts__item:first-child {
+  @media (min-width: @desktop-width) {
+    margin-bottom: 30px;
+    padding-top: 8px;
   }
 }
 
@@ -110,6 +118,9 @@
   margin: 0;
 
   outline: 1px solid blue;
+  @media (min-width: @desktop-width) {
+    padding-top: 0;
+  }
 }
 
 .contacts__maps {
@@ -140,16 +151,16 @@ iframe.contacts__map-item {
 }
 
 .contacts__write-us {
-  margin: 38px auto 0;
+  margin: 37px auto 0;
 
   @media (min-width: @tablet-width) {
-    margin-top: 52px;
     width: 230px;
+    margin-top: 52px;
   }
 
   @media (min-width: @desktop-width) {
     width: 230px;
     margin: 0;
-    margin-top: 56px;
+    margin-top: 78px;
   }
 }
