--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -28,7 +28,10 @@
 }
 
 .filter__fieldset-wrapper {
+  margin-top: 10px;
+
   @media (min-width: @tablet-width) {
+    margin-top: 0;
     height: 178px;
     padding-top: 50px;
   }
@@ -40,6 +43,11 @@
   margin: 0;
   margin-top: 9px;
   padding: 0;
+
+  &--single {
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
 
 
   @media (min-width: @tablet-width) {
@@ -170,6 +178,10 @@
 
   outline: 1px solid green;
 
+  &--single {
+    margin-bottom: 0;
+  }
+
   @media (min-width: @tablet-width) {
     font-size: 19px;
 
@@ -229,7 +241,7 @@
 }
 
 .filter__input-list--textarea .filter__input-item {
-  height: 142px;
+  height: 140px;
   margin-bottom: 13px;
   @media (min-width: @tablet-width) {
     margin-bottom: 10px;
@@ -237,17 +249,15 @@
 }
 
 .filter__textarea {
-  @media (min-width: @tablet-width) {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-  }
+  width: 100%;
+  height: 100%;
+  padding: 0;
 }
 
 .filter__label {
   display: block;
 
-  margin-right: 42px;
+  margin-right: 40px;
   margin-bottom: 15px;
 }
 
@@ -285,8 +295,15 @@
 }
 
 .filter__sent-order {
-  width: 230px;
-  margin-bottom: 50px;
+  width: 260px;
+  margin-bottom: 53px;
 
   background-color: rgb(255, 255, 255);
+
+  @media (min-width: @tablet-width) {
+    width: 230px;
+    margin-bottom: 50px;
+
+    background-color: rgb(255, 255, 255);
+  }
 }
