--- a/source/less/general.less
+++ b/source/less/general.less
@@ -22,7 +22,7 @@ body {
 }
 
 .screen-width {
-  width: @mobile-width;
+  min-width: @mobile-width;
   margin: 0 auto;
 }
 
@@ -32,7 +32,7 @@ body {
 
 @media (min-width: @tablet-width) {
   .screen-width {
-    width: @tablet-width;
+    max-width: @tablet-width;
     margin: 0 auto;
   }
 
@@ -43,7 +43,7 @@ body {
 
 @media (min-width: @desktop-width) {
   .screen-width {
-    width: @desktop-width;
+   max-width: @desktop-width;
     margin: 0 auto;
   }
 
