--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,7 +14,7 @@
 
   @media (min-width: @desktop-width) {
     height: 144px;
-    margin-top: 50px;
+    margin-top: 0;
     padding: 0;
     align-items: stretch;
   }
@@ -98,8 +98,8 @@
 
   @media (min-width: @desktop-width) {
     width: 185px;
-    padding-top: 60px;
+    padding-top: 63px;
     padding-left: 43px;
-    height: 84px;
+    height: 81px;
   }
 }
