--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -25,4 +25,12 @@
     padding-top: 94px;
     padding-bottom: 23px;
   }
+
+  @media (min-width: @tablet-width) {
+    font-size: 53px;
+    line-height: 57px;
+
+    margin-top: -41px;
+    margin-bottom: 161px;
+  }
 }
