--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -34,7 +34,7 @@
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    height: 462px;
+    height: 463px;
   }
 }
 
@@ -65,6 +65,9 @@
 
   @media (min-width: @desktop-width) {
     width: 100%;
+    height: 196px;
+
+    justify-content: flex-start;
   }
 }
 
@@ -75,6 +78,10 @@
 
   @media (min-width: @tablet-width) {
     width: 100%;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 0;
   }
 }
 
@@ -90,6 +97,9 @@
     font-size: 20px;
 
     padding-top: 10%;
+  }
+  @media (min-width: @desktop-width) {
+    padding-bottom: 0;
   }
 }
 
@@ -108,6 +118,11 @@
 
     flex-grow: 1;
   }
+  @media (min-width: @desktop-width) {
+    padding-bottom: 0;
+
+    flex-grow: 1;
+  }
 }
 
 .catalog__order {
@@ -120,6 +135,11 @@
   @media (min-width: @tablet-width) {
     height: 45px;
     padding-top: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 73px;
+    padding-bottom: 0;
   }
 }
 
@@ -138,6 +158,12 @@
 
     padding-top: 25px;
     padding-left: 5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 70%;
+    padding-top: 22px;
+    padding-left: 0;
   }
 }
 
