--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -15,6 +15,8 @@
   @media (min-width: @desktop-width) {
     width: 100%;
     max-height: 455px;
+    padding-bottom: 0;
+    margin-bottom: 107px;
 
     flex-wrap: wrap;
   }
@@ -37,9 +39,10 @@
   }
 
   @media (min-width: @desktop-width) {
+    height: 60px;
     width: 230px;
-    margin-top: 100px;
-    padding-left: 30px;
+    margin-top: 47px;
+    padding: 50px 0 8px 78px;
   }
 }
 
@@ -87,6 +90,7 @@
 
   @media (min-width: @desktop-width) {
     width: 250px;
+    padding: 13px 35px 46px 78px;
   }
 }
 
@@ -105,6 +109,6 @@
 
   @media (min-width: @desktop-width) {
     width: 230px;
-    margin-left: 30px;
+    margin-left: 80px;
   }
 }
