Добавил волнистую рамку под заголовком

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -83,6 +83,8 @@
 }
 
 .main-nav__list {
+  z-index: 300;
+
   padding: 0;
 
   outline: 1px solid green;
@@ -233,6 +235,8 @@
   font-size: 15px;
   font-weight: normal;
   line-height: 24px;
+
+  z-index: 300;
 
   display: none;
 
