--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -27,7 +27,7 @@
     padding: 0 50px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     padding-right: 225px;
     padding-left: 225px;
   }
@@ -80,7 +80,7 @@
 
     &--textarea {
       padding-top: 50px;
-      padding-bottom: 43px;
+      padding-bottom: 45px;
     }
   }
 
