--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,5 +1,5 @@
 .logo {
-  width: 258px;
+  width: auto;
   height: 79px;
 
   text-align: center;
@@ -14,8 +14,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    text-align: center;
     height: 88px;
+
+    text-align: center;
+
     order: -1;
   }
 }
