--- a/source/less/general.less
+++ b/source/less/general.less
@@ -23,6 +23,7 @@ body {
 
 .screen-width {
   min-width: @mobile-width;
+  max-width: @mobile-width;
   margin: 0 auto;
 }
 
@@ -43,7 +44,7 @@ body {
 
 @media (min-width: @desktop-width) {
   .screen-width {
-   max-width: @desktop-width;
+    max-width: @desktop-width;
     margin: 0 auto;
   }
 
