--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -8,3 +8,28 @@
   font-size: 0px;
   line-height: 0px;
 }
+
+.text-hover() {
+  opacity: .6;
+}
+
+.text-active() {
+  opacity: .3;
+}
+
+.icon-hover() {
+  fill: @color-mint;
+}
+
+.icon-active() {
+  fill: @color-mint;
+  opacity: 0.3;
+}
+
+.item-hover-shadow() {
+  box-shadow: 0 8px 14px rgba(0,0,0,0.1);
+}
+
+.item-active-shadow() {
+  box-shadow: 0 5px 8px rgba(0,0,0,0.1);
+}
