--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -33,7 +33,7 @@
   font-weight: bold;
   line-height: 30px;
 
-  margin: 0 0 24px 0;
+  margin: 0 0 22px 0;
 
   outline: 1px solid orange;
 
@@ -139,25 +139,59 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 352px;
-    right: 50px;
+    top: 367px;
+    right: 0;
   }
 
   @media (min-width: @desktop-width) {
     position: absolute;
     top: 322px;
-    right: 50px;
+    right: 0;
+  }
+}
+
+.opinions__prev-item,
+.opinions__next-item {
+  width: 130px;
+
+  cursor: pointer;
+
+  border-color: transparent;
+  outline: 1px solid orange;
+  background-color: transparent;
+  background-repeat: no-repeat;
+
+  &:hover {
+    opacity: .6;
+  }
+
+  &:active {
+    opacity: .3;
   }
 }
 
 .opinions__prev-item {
-  width: 130px;
+  background-image: url("../img/icon-left-arrow.svg");
+  background-position: 37px 10px;
 
-  outline: 1px solid orange;
+  @media(min-width: @tablet-width) {
+    background-position: 52px 0;
+  }
+
+  @media(min-width: @desktop-width) {
+    background-position: 51px 0;
+  }
 }
 
 .opinions__next-item {
-  width: 130px;
+  background-image: url("../img/icon-right-arrow.svg");
+  background-position: 37px 10px;
 
-  outline: 1px solid orange;
+  @media(min-width: @tablet-width) {
+    background-position: 10px 0;
+  }
+
+  @media(min-width: @desktop-width) {
+    background-position: 10px 0;
+  }
 }
