--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,6 +1,13 @@
 @mobile-width: 320px;
 @tablet-width: 768px;
 @desktop-width: 1150px;
+@color-white: rgb(255, 255, 255);
 @color-light-grey: rgb(250, 250, 250);
 @color-dark-grey: rgb(241, 241, 241);
+@color-rum-swizzle: rgb(236, 236, 236);
+@color-thistle: rgb(211, 210, 210);
+@color-harp: rgb(199, 199, 199);
+@color-suva-grey: rgb(141, 141, 141);
+@color-charcoal: rgb(68, 68, 68);
 @color-mint: rgb(99, 209, 187);
+@color-black: rgb(0, 0, 0);
